shorten visible text of selected option w/ dots & adjust padding to prevent overlap w/ select form dropdown icon in searchSidebar & in modal

--- a/assets/scss/components/the-search.scss
+++ b/assets/scss/components/the-search.scss
@@ -3,6 +3,8 @@
 
     select {
         height: 50px; //
+        text-overflow: ellipsis;
+        white-space: nowrap;
 
         option {
             overflow: hidden;
